added conf file

--- a/.gitignore
+++ b/.gitignore
@@ -2,37 +2,46 @@
 *~
 *.obj
 *.pro.user*
-*.o.cmd
-prj/*/*/*
-!prj/*/*/*.vcxproj
-!prj/*/*/*.vcxproj.filters
-!prj/*/*/*.sln
-!prj/*/*_vs15/Makefile
-!prj/*/*_vs15/*.h
-!prj/*/*/*.pro
-!prj/*/*/*.pri
-!prj/*/*_mkfl/Makefile
-!prj/driver/*/*.rules
+.tmp/*
+contrib/sys/*/*/*/*
+contrib/sys/*/lib/*
+contrib/sys/*/dll/*
+contrib/sys/*/bin/*
+!contrib/sys/*/*/*.udoc
+!contrib/sys/*/*.udoc
+!contrib/sys/*.udoc
+!contrib/sys/*/doocs64_install/server/*.bat
+sys/*/*/*/*
+sys/*/lib/*
+sys/*/dll/*
 sys/*/bin/*
-sys/*/mbin/*
-sys/*/.objects/*
-sys/drivers
-!sys/*/bin/setup_environment.bat
+!sys/*/*/*.udoc
+!sys/*/*.udoc
+!sys/*.udoc
+!sys/*/install/server/*.bat
+prj/*/*/*
+!prj/*/*_vs*/*.sln
+!prj/*/*_vs*/*.vcxproj
+!prj/*/*_vs*/*.vcxproj.filters
+!prj/*/*_vs*/*.vdproj
+!prj/*/*/*.pro
+!prj/*/*/*.cmake
+!prj/*/*_mkfl/Makefile
+!prj/common/*
+!prj/common/*/*
+!prj/common/*/*/*
+workspaces/*/*
+!workspaces/*/*.sln
 moc_*.cpp
-workspaces
 .gitattributes
 .DS_Store
 .qmake.stash
-*.app
-*wallet.json
-*after-import-key-*.wallet
-*.so*
-prj/driver/x1timer_by_lyuto/
-drivers/src/x2timer/orig/x1timer.c~RF9d95785.TMP
-.svn/*
-*/.svn/*
-*/*/.svn/*
-*/*/*/.svn/*
-*/*/*/*/.svn/*
-*/*/*/*/*/.svn/*
-*.TMP
+src/.original/*/*
+contrib/doocs/*
+*.objects
+*.objects/*
+*.suo
+*.VC.VC.opendb
+*.VC.db
+#include/.private/*.h
+#include/.private/*/*.h
