--- a/prj/tests/realcom_to_tcp_test_vs15/realcom_to_tcp_test.vcxproj
+++ b/prj/tests/realcom_to_tcp_test_vs15/realcom_to_tcp_test.vcxproj
@@ -169,7 +169,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(TargetPath) \\znpi02\c$\tests\new\.</Command>
+      <Command>copy $(TargetPath) \\znpi01\c$\test\new\.</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -227,7 +227,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(TargetPath) \\znpi02\c$\tests\new\.</Command>
+      <Command>copy $(TargetPath) \\znpi01\c$\test\new\.</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
